fixing microblog page fix

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -223,6 +223,14 @@ DocumentRoot "/srv/httpd/htdocs"
 
 </Directory>
 
+<Directory "/srv/httpd/htdocs/microblog/">
+	Options Indexes FollowSymlinks
+	AllowOverride None
+	Order allow,deny
+	Allow from all
+	DirectoryIndex index.html
+</Directory>
+
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
 # is requested.
@@ -314,6 +322,7 @@ LogLevel warn
     # directives as to Alias.
     #
     ScriptAlias /cgi-bin/ "/srv/httpd/cgi-bin/"
+	 Alias /microblog/ "/srv/httpd/htdocs/microblog/"
 
 </IfModule>
 
