--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -38,7 +38,7 @@ MENU VSHIFT 5
 LABEL xconf
 MENU LABEL Graphical mode (KDE)
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/ copy2ram
+APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
 TEXT HELP
     Run the default Byzantium
     desktop.  Try to autoconfigure
@@ -49,16 +49,27 @@ ENDTEXT
 LABEL lxde
 MENU LABEL Graphical mode (LXDE)
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/ copy2ram
+APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/
 TEXT HELP
     Run the lightweight Byzantium
     desktop (LXDE).
 ENDTEXT
 
+LABEL cp2ram
+MENU LABEL Copy To RAM
+KERNEL /boot/vmlinuz
+APPEND initrd=/boot/initrd.xz vga=F00 copy2ram autoexec=xconf;telinit~4
+TEXT HELP
+    Run Byzantium but first copy
+    everything to RAM to get a
+    huge speed increase (needs
+    >300MB RAM).
+ENDTEXT
+
 LABEL startx
 MENU LABEL VESA mode
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/ copy2ram
+APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/
 TEXT HELP
     Run Byzantium's KDE desktop but
     don't autoconfigure the graphics
