--- a/porteus/olsrd/olsrd.conf
+++ b/porteus/olsrd/olsrd.conf
@@ -1,165 +1,255 @@
 #
-# OLSR.org routing daemon config file
-# This file contains the usual options for an ETX based
-# stationary network without fisheye
-# (for other options see olsrd.conf.default.full)
+# olsr.org OLSR daemon config file
 #
 # Lines starting with a # are discarded
 #
+# This file was shipped with the debian olsrd package
+#
 
-#### ATTENTION for IPv6 users ####
-# Because of limitations in the parser IPv6 addresses must NOT
-# begin with a ":", so please add a "0" as a prefix.
+# Debug level(0-9)
+# If set to 0 the daemon runs in the background
 
-###########################
-### Basic configuration ###
-###########################
-# keep this settings at the beginning of your first configuration file
+DebugLevel	0
 
-# Debug level (0-9)
-# If set to 0 the daemon runs in the background, unless "NoFork" is set to true
-# (Default is 1)
+# the interface the mesh runs on is specified at run time using the -i flag
 
-DebugLevel  0
+#InterfaceDefaults
+InterfaceDefaults
+{
+  # Olsrd can autodetect changes in NIC configurations (IP address
+  # changes etc.).  This is enabled by default and the interval to
+  # poll for changes on is defined by NicChgsPollInt.  This polling
+  # can be disabled pr. NIC by setting AutoDetectChanges to no.
+
+  #AutoDetectChanges            no
+
+  # IPv4 broadcast address to use. The
+  # one usefull example would be 255.255.255.255
+  # If not defined the broadcastaddress
+  # every card is configured with is used
+
+  Ip4Broadcast		255.255.255.255
+
+  # IPv6 address scope to use.
+  # Must be 'site-local' or 'global'
+
+  #Ip6AddrType		site-local
+
+  # IPv6 multicast address to use when
+  # using site-local addresses.
+  # If not defined, ff05::15 is used
+
+  #Ip6MulticastSite		ff05::11
+
+  # IPv6 multicast address to use when
+  # using global addresses
+  # If not defined, ff0e::1 is used
+
+  #Ip6MulticastGlobal	ff0e::1
+
+
+  # Emission intervals.
+  # If not defined, RFC proposed values will
+  # be used in most cases.
+
+  # Hello interval in seconds(float)
+    HelloInterval		6.0
+
+  # HELLO validity time
+    HelloValidityTime		600.0
+
+  # TC interval in seconds(float)
+    TcInterval			0.5
+
+  # TC validity time
+    TcValidityTime		300.0
+
+  # MID interval in seconds(float)
+    MidInterval			10.0
+
+  # MID validity time
+    MidValidityTime		300.0
+
+  # HNA interval in seconds(float)
+    HnaInterval			10.0
+
+  # HNA validity time
+    HnaValidityTime		300.0
+
+  # When multiple links exist between hosts
+  # the weight of interface is used to determine
+  # the link to use. Normally the weight is
+  # automatically calculated by olsrd based
+  # on the characteristics of the interface,
+  # but here you can specify a fixed value.
+  # Olsrd will choose links with the lowest value.
+
+  #Weight 0
+
+
+  # If a certain route should be preferred 
+  # or ignored by the mesh, the Link Quality 
+  # value of a node can be multiplied with a factor 
+  # entered here. In the example the route 
+  # using 192.168.0.1 would rather be ignored.
+  # A multiplier of 0.5 will result in a small
+  # (bad) LinkQuality value and a high (bad)
+  # ETX value.
+
+  #LinkQualityMult 192.168.0.1 0.5
+
+  # This multiplier applies to all other nodes 
+  # LinkQualityMult default 0.8
+}
+
+## these settings should work for funkfeuer, freifunk, etc.
+# Fisheye mechanism for TC messages 0=off, 1=on
+#LinkQualityFishEye 1
+#LinkQualityAlgorithm "etx_ff"
+
+## if using commotionwireless.net, comment the line above and uncomment these:
+LinkQualityFishEye 0
+LinkQualityAlgorithm "etx_ffeth"
 
 # IP version to use (4 or 6)
-# (Default is 4)
 
-# IpVersion 4
+IpVersion	4
 
-#################################
-### OLSRd agent configuration ###
-#################################
-# this parameters control the settings of the routing agent which are not
-# related to the OLSR protocol and it's extensions
+# Clear the screen each time the internal state changes
 
-# FIBMetric controls the metric value of the host-routes OLSRd sets.
-# - "flat" means that the metric value is always 2. This is the preferred value
-#   because it helps the linux kernel routing to clean up older routes
-# - "correct" use the hopcount as the metric value.
-# - "approx" use the hopcount as the metric value too, but does only update the
-#   hopcount if the nexthop changes too
-# (Default is "flat")
+ClearScreen     yes
 
-# FIBMetric "flat"
+# HNA IPv4 routes
+# syntax: netaddr netmask
+# Example Internet gateway:
+# 0.0.0.0 0.0.0.0
 
-#######################################
-### Linux specific OLSRd extensions ###
-#######################################
-# these parameters are only working on linux at the moment, but might become
-# useful on BSD in the future
-
-# SrcIpRoutes tells OLSRd to set the Src flag of host routes to the originator-ip
-# of the node. In addition to this an additional localhost device is created
-# to make sure the returning traffic can be received.
-# (Default is "no")
-
-# SrcIpRoutes no
-
-# Specify the proto tag to be used for routes olsr inserts into kernel
-# currently only implemented for linux
-# valid values under linux are 1 .. 254
-# 1 gets remapped by olsrd to 0 UNSPECIFIED (1 is reserved for ICMP redirects)
-# 2 KERNEL routes (not very wise to use)
-# 3 BOOT (should in fact not be used by routing daemons)
-# 4 STATIC 
-# 8 .. 15 various routing daemons (gated, zebra, bird, & co)
-# (defaults to 0 which gets replaced by an OS-specific default value
-# under linux 3 (BOOT) (for backward compatibility)
-
-# RtProto 0
-
-# Activates (in IPv6 mode) the automatic use of NIIT
-# (see README-Olsr-Extensions)
-# (default is "yes")
-
-# UseNiit yes
-
-# Activates the smartgateway ipip tunnel feature.
-# See README-Olsr-Extensions for a description of smartgateways.
-# (default is "no")
-
-# SmartGateway no
-
-# Allows the selection of a smartgateway with NAT (only for IPv4)
-# (default is "yes")
-
-# SmartGatewayAllowNAT yes
-
-# Defines what kind of Uplink this node will publish as a
-# smartgateway. The existence of the uplink is detected by
-# a route to 0.0.0.0/0, ::ffff:0:0/96 and/or 2000::/3.
-# possible values are "none", "ipv4", "ipv6", "both"
-# (default is "both")
-
-# SmartGatewayUplink "both"
-
-# Specifies if the local ipv4 uplink use NAT
-# (default is "yes")
-
-# SmartGatewayUplinkNAT yes
-
-# Specifies the speed of the uplink in kilobit/s.
-# First parameter is upstream, second parameter is downstream
-# (default is 128/1024)
-
-# SmartGatewaySpeed 128 1024
-
-# Specifies the EXTERNAL ipv6 prefix of the uplink. A prefix
-# length of more than 64 is not allowed.
-# (default is 0::/0
-
-# SmartGatewayPrefix 0::/0
-
-##############################
-### OLSR protocol settings ###
-##############################
-
-# HNA (Host network association) allows the OLSR to announce
-# additional IPs or IP subnets to the net that are reachable
-# through this node.
-# Syntax for HNA4 is "network-address    network-mask"
-# Syntax for HNA6 is "network-address    prefix-length"
-# (default is no HNA)
 Hna4
 {
-# Internet gateway
-# 0.0.0.0   0.0.0.0
-# specific small networks reachable through this node
-# 15.15.0.0 255.255.255.0
+#   Internet gateway:
+#   0.0.0.0      0.0.0.0
+#   more entries can be added:
+#   192.168.1.0  255.255.255.0
 }
+
+# HNA IPv6 routes
+# syntax: netaddr prefix
+# Example Internet gateway:
 Hna6
 {
-# Internet gateway
-#   0::                     0
-# specific small networks reachable through this node
-#   fec0:2200:106:0:0:0:0:0 48
+#   Internet gateway:
+#   ::              0
+#   more entries can be added:
+#   fec0:2200:106:: 48
 }
 
-################################
-### OLSR protocol extensions ###
-################################
 
-# Link quality algorithm (only for lq level 2)
-# (see README-Olsr-Extensions)
-# - "etx_float", a floating point  ETX with exponential aging
-# - "etx_fpm", same as ext_float, but with integer arithmetic
-# - "etx_ff" (ETX freifunk), an etx variant which use all OLSR
-#   traffic (instead of only hellos) for ETX calculation
-# - "etx_ffeth", an incompatible variant of etx_ff that allows
-#   ethernet links with ETX 0.1.
-# (defaults to "etx_ff")
+# Should olsrd keep on running even if there are
+# no interfaces available? This is a good idea
+# for a PCMCIA/USB hotswap environment.
+# "yes" OR "no"
 
-# LinkQualityAlgorithm    "etx_ff"
+AllowNoInt	yes
 
-# Fisheye mechanism for TCs (0 meansoff, 1 means on)
-# (default is 1)
+# TOS(type of service) value for
+# the IP header of control traffic.
+# If not set it will default to 16
 
-LinkQualityFishEye  0
+#TosValue	16
 
-#####################################
-### Example plugin configurations ###
-#####################################
+# The fixed willingness to use(0-7)
+# If not set willingness will be calculated
+# dynamically based on battery/power status
+# if such information is available
+
+Willingness    	3
+
+# Allow processes like the GUI front-end
+# to connect to the daemon.
+
+IpcConnect
+{
+     # Determines how many simultaneously
+     # IPC connections that will be allowed
+     # Setting this to 0 disables IPC
+
+     MaxConnections  0
+
+     # By default only 127.0.0.1 is allowed
+     # to connect. Here allowed hosts can
+     # be added
+
+     Host            127.0.0.1
+     #Host            10.0.0.5
+
+     # You can also specify entire net-ranges 
+     # that are allowed to connect. Multiple
+     # entries are allowed
+
+     #Net             192.168.1.0 255.255.255.0     
+}
+
+# Wether to use hysteresis or not
+# Hysteresis adds more robustness to the
+# link sensing but delays neighbor registration.
+# Used by default. 'yes' or 'no'
+# Do not use hysteresis with ETX!
+
+UseHysteresis	no
+
+# Hysteresis parameters
+# Do not alter these unless you know 
+# what you are doing!
+# Set to auto by default. Allowed
+# values are floating point values
+# in the interval 0,1
+# THR_LOW must always be lower than
+# THR_HIGH.
+
+#HystScaling	0.50
+#HystThrHigh	0.80
+#HystThrLow	0.30
+
+
+# Link quality level
+# 0 = do not use link quality
+# 1 = use link quality for MPR selection
+# 2 = use link quality for MPR selection and routing
+# Defaults to 0
+
+LinkQualityLevel	2
+
+# Polling rate in seconds(float). 
+# Default value 0.05 sec
+
+Pollrate	0.1
+
+
+# TC redundancy
+# Specifies how much neighbor info should
+# be sent in TC messages
+# Possible values are:
+# 0 - only send MPR selectors
+# 1 - send MPR selectors and MPRs
+# 2 - send all neighbors
+#
+# defaults to 0
+
+TcRedundancy	2
+
+
+#
+# MPR coverage
+# Specifies how many MPRs a node should
+# try select to reach every 2 hop neighbor
+#
+# Can be set to any integer >0
+#
+# defaults to 1
+
+MprCoverage	5
+
+
 # Olsrd plugins to load
 # This must be the absolute path to the file
 # or the loader will use the following scheme:
@@ -167,46 +257,76 @@ LinkQualityFishEye  0
 #   environment variable.
 # - The list of libraries cached in /etc/ld.so.cache
 # - /lib, followed by /usr/lib
-#
-# the examples in this list are for linux, so check if the plugin is
-# available if you use windows/BSD.
-# each plugin should have a README file in it's lib subfolder
 
-# LoadPlugin "olsrd_txtinfo.dll"
+# Configuration examples for plugins:
+# see /usr/share/doc/olsrd-plugins/ for some for documentation
+
+# these are loaded from LD_LIBRARY_PATH
+#LoadPlugin "olsrd_httpinfo.so.0.1"
+#{
+  # defaults to 1978
+  #PlParam "Port" "8080"
+  # if you dont set these, the default is to listen only on the loopback device
+  #PlParam "Host"   "80.23.53.22"
+  #PlParam "Net"    "10.0.0.0 255.0.0.0"
+  #PlParam "Net" "0.0.0.0 0.0.0.0"
+  #PlParam "Host"  "127.0.0.1"
+#}
+
+## for more info: http://olsr.org/?q=txtinfo_plugin
 LoadPlugin "olsrd_txtinfo.so.0.1"
 {
-    # port number the txtinfo plugin will be listening, default 2006
-#   PlParam     "port"   "81"
-    # ip address that can access the plugin, use "0.0.0.0"
-    # to allow everyone
-    PlParam     "Accept"   "127.0.0.1"
+  PlParam     "port"   "2006"
+  PlParam     "accept" "0.0.0.0"
 }
 
-#############################################
-### OLSRD default interface configuration ###
-#############################################
-# the default interface section can have the same values as the following
-# interface configuration. It will allow you so set common options for all
-# interfaces.
-
-InterfaceDefaults {
-    # Ip4Broadcast      255.255.255.255
-}
-
-######################################
-### OLSRd Interfaces configuration ###
-######################################
-# multiple interfaces can be specified for a single configuration block
-# multiple configuration blocks can be specified
-
-# WARNING, don't forget to insert your interface names here !
-# MOOF this must be changed if != wlan0
-Interface "wlan0"
+## for more info: http://olsr.org/?q=jsoninfo_plugin
+LoadPlugin "olsrd_jsoninfo.so.0.0"
 {
-    # Interface Mode is used to prevent unnecessary
-    # packet forwarding on switched ethernet interfaces
-    # valid Modes are "mesh" and "ether"
-    # (default is "mesh")
-
-    # Mode "mesh"
+  PlParam     "port"   "9090"
+  PlParam     "accept" "0.0.0.0"
 }
+
+# useful if your machine has an uplink
+#LoadPlugin "olsrd_dyn_gw.so.0.4"
+#{
+  # Here parameters are set to be sent to the
+  # plugin. Theese are on the form "key" "value".
+  # Parameters ofcause, differs from plugin to plugin.
+  # Consult the documentation of your plugin for details.
+
+  # Example: dyn_gw params
+
+  # how often to check for Internet connectivity
+  # defaults to 5 secs
+  #PlParam     "Interval"   "40"
+    
+  # if one or more IPv4 addresses are given, do a ping on these in
+  # descending order to validate that there is not only an entry in
+  # routing table, but also a real internet connection. If any of
+  # these addresses could be pinged successfully, the test was
+  # succesful, i.e. if the ping on the 1st address was successful,the
+  # 2nd won't be pinged
+  #PlParam     "Ping"       "141.1.1.1"
+  #PlParam     "Ping"       "194.25.2.129"
+#}
+
+#LoadPlugin "olsrd_nameservice.so.0.2"
+#{
+  #PlParam "name" "xxx"
+  #PlParam "a.b.c.d" "xxx-eth"
+  #PlParam "a.b.c.e" "xxx-bbb"
+  #PlParam "a.b.c.f" "xxx-olsr"
+  #PlParam "suffix" ".olsr"
+#}
+
+#LoadPlugin "olsrd_dot_draw.so.0.3"
+#{
+  # accept connection from IP:
+  # default 127.0.0.1 (localhost)  
+  #PlParam     "accept" "192.168.0.5"
+  #PlParam     "port" "2004"
+#}
+
+
+
