Initial commit of Skype slackbuild for NYC!Sandy.
Fixed a bug in byzantium_configd.py in how network interfaces are passed to olsrd.

Updated rc.services to enable Avahi for DNS resolver propagation.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/olsrd/olsrd.conf
+++ b/porteus/olsrd/olsrd.conf
@@ -112,6 +112,14 @@ ClearScreen     yes
 # Example Internet gateway:
 # 0.0.0.0 0.0.0.0
 
+# Enable smart gateway detection and propagation.
+SmartGateway yes
+SmartGatewayAllowNAT yes
+SmartGatewayPeriod 10000
+SmartGatewayStableCount 6
+SmartGatewayUplink "both"
+SmartGatewayUplinkNAT yes
+
 Hna4
 {
 #   Internet gateway:
@@ -316,5 +324,9 @@ LoadPlugin "olsrd_jsoninfo.so.0.0"
   #PlParam     "port" "2004"
 #}
 
-
-
+SmartGateway yes
+SmartGatewayAllowNAT yes
+SmartGatewayPeriod 10000
+SmartGatewayStableCount 6
+SmartGatewayUplink "both"
+SmartGatewayUplinkNAT yes
