Added iptables call to set up NAT.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/30-restart_olsrd.conf
+++ b/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/30-restart_olsrd.conf
@@ -20,5 +20,8 @@ sleep 5
 # Add Hna4 line.
 echo "Hna4 {0.0.0.0 0.0.0.0}" >> /etc/olsrd.conf
 
+# Set up NAT.
+/usr/sbin/iptables -t nat -A POSTROUTING -o $interface -j MASQUERADE
+
 # Restart olsrd.
 olsrd -i $INTERFACES
