--- a/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/30-restart_olsrd.conf
+++ b/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/30-restart_olsrd.conf
@@ -4,24 +4,31 @@ PID=`ps ax | grep [o]lsrd | awk '{print $1}'`
 # Grab a list of the configured interfaces.
 INTERFACES=`ps ax | grep [o]lsrd | awk '{print $7,$8,$9}'`
 
-# Test for presence of Internet route.  grep will return 0 if found,
-# 1 if not found.
-grep -q '^Hna4 {' /etc/olsrd.conf
-NOTFOUND=$?
-if [ ! $NOTFOUND ]; then
-    # Hna4 line found.  Don't add it.
-    exit 0
+if $if_up; then
+    # Kill olsrd.
+    kill -9 $PID
+    sleep 5
+
+    # Add Hna4 line.
+    echo "Hna4 {0.0.0.0 0.0.0.0}" >> /etc/olsrd.conf
+
+    # Set up NAT.
+    /usr/sbin/iptables -t nat -A POSTROUTING -o $interface -j MASQUERADE
+
+    # Restart olsrd.
+    olsrd -i $INTERFACES
+else
+    # Kill olsrd.
+    kill -9 $PID
+    sleep 5
+
+    # Delete Hna4 line.
+    mv /etc/olsrd.conf /etc/olsrd.conf.bak
+    grep -v "^Hna4 {" /etc/olsrd.conf.bak > /etc/olsrd.conf
+    
+    # Tear down NAT.
+    /usr/sbin/iptables -t nat -D POSTROUTING -o $interface -j MASQUERADE
+
+    # Restart olsrd.
+    olsrd -i $INTERFACES
 fi
-
-# Kill olsrd.
-kill -9 $PID
-sleep 5
-
-# Add Hna4 line.
-echo "Hna4 {0.0.0.0 0.0.0.0}" >> /etc/olsrd.conf
-
-# Set up NAT.
-/usr/sbin/iptables -t nat -A POSTROUTING -o $interface -j MASQUERADE
-
-# Restart olsrd.
-olsrd -i $INTERFACES
