Added code to add and remove the lucky-eights DNSes to /etc/resolv.conf.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/30-restart_olsrd.conf
+++ b/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/30-restart_olsrd.conf
@@ -14,6 +14,10 @@ if $if_up; then
 
     # Set up NAT.
     /usr/sbin/iptables -t nat -A POSTROUTING -o $interface -j MASQUERADE
+    
+    # Add DNSes that actually work to resolve.conf.
+    echo "nameserver 8.8.8.8" >> /etc/resolv.conf
+    echo "nameserver 8.8.4.4" >> /etc/resolv.conf
 
     # Restart olsrd.
     olsrd -i $INTERFACES
@@ -28,6 +32,10 @@ else
     
     # Tear down NAT.
     /usr/sbin/iptables -t nat -D POSTROUTING -o $interface -j MASQUERADE
+    
+    # Remove extra DNSes from resolv.conf.
+    mv -f /etc/resolv.conf /etc/resolv.conf.bak
+    grep -v "^nameserver 8.8." /etc/resolv.conf.bak >> /etc/resolv.conf
 
     # Restart olsrd.
     olsrd -i $INTERFACES
