Changed 'Text mode' to 'Power saving mode' at Haxwithaxe's suggestion.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -92,14 +92,14 @@ TEXT HELP
 ENDTEXT
 
 LABEL text
-MENU LABEL Text mode
+MENU LABEL Power saving mode
 KERNEL /boot/vmlinuz
 APPEND initrd=/boot/initrd.xz autoexec=telinit~3 
 TEXT HELP
-    Start Byzantium in text mode.
-    You will only have a command
-    prompt but you can start a
-    desktop if you need one.
+    Start Byzantium in text mode. You
+    will only have a command prompt, but
+    you will save a lot of battery power.
+    You can start the GUI manually.
 ENDTEXT
 
 LABEL pxe
