Changed 'Graphics mode' to 'Desktop mode'.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -35,24 +35,26 @@ MENU VSHIFT 5
 	menu color msg07	37;40      #90ffffff #00000000 std
 
 LABEL kde
-MENU LABEL Graphics mode (KDE)
+MENU LABEL Desktop mode (KDE)
 KERNEL /boot/vmlinuz
 APPEND initrd=/boot/initrd.xz vga=F00 changes=/porteus/ 
 TEXT HELP
     Start Byzantium with the KDE
     desktop.  Autoconfigure the
     graphics card to use the
-    maximum resolution possible.
+    highest resolution possible.
 ENDTEXT
 
 LABEL lxde
-MENU LABEL Graphics mode (LXDE)
+MENU LABEL Desktop mode (LXDE)
 KERNEL /boot/vmlinuz
 APPEND initrd=/boot/initrd.xz vga=F00 lxde changes=/porteus/ 
 TEXT HELP
     Start Byzantium but use the
     lightweight LXDE desktop
-    instead of KDE.
+    instead of KDE.  Autoconfigure
+    the graphics card to use the
+    highest resolution possible.
 ENDTEXT
 
 LABEL fresh
@@ -70,7 +72,7 @@ TEXT HELP
 ENDTEXT
 
 LABEL copy2ram
-MENU LABEL Copy boot media to RAM
+MENU LABEL Copy systemware to RAM
 KERNEL /boot/vmlinuz
 APPEND initrd=/boot/initrd.xz vga=F00 copy2ram 
 TEXT HELP
@@ -78,6 +80,7 @@ TEXT HELP
     first copy everything into RAM.
     This gives a huge speed increase
     but it needs at least 1G of RAM.
+    It also takes a while.
 ENDTEXT
 
 LABEL vesa
@@ -88,18 +91,20 @@ TEXT HELP
     Start the KDE desktop but skip
     autoconfiguration of the graphics
     card.  The desktop will have a
-    resolution of 1024x768.
+    default resolution of 1024x768.
 ENDTEXT
 
 LABEL text
-MENU LABEL Power saving mode
+MENU LABEL Text mode
 KERNEL /boot/vmlinuz
 APPEND initrd=/boot/initrd.xz autoexec=telinit~3 
 TEXT HELP
-    Start Byzantium in text mode. You
-    will only have a command prompt, but
-    you will save a lot of battery power.
-    You can start the GUI manually.
+    Start Byzantium in text mode.
+    You will only have a command
+    prompt but you can start a
+    desktop if you need to.  This
+    mode uses the least battery
+    power.
 ENDTEXT
 
 LABEL pxe
@@ -110,7 +115,7 @@ TEXT HELP
     Start Byzantium as usual, but also
     initialize a PXE server.   This
     will allow you to netboot Byzantium
-    on other computers over the network.
+    on other computers over a network.
 ENDTEXT
 
 MENU SEPARATOR
