Created a new background image for the v0.3a desktop.  Linked to black.jpg and porteus-paper.jpg.
Still reworking the porteus.cfg file.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -1,7 +1,7 @@
 PROMPT 0
 TIMEOUT 90
 DEFAULT /boot/syslinux/vesamenu.c32
-MENU BACKGROUND /boot/byzantium.jpg
+#MENU BACKGROUND /boot/byzantium.jpg
 MENU TITLE Byzantium Linux v0.3a (32-bit)
 
 MENU WIDTH 30
