I've been trying to make the ISOLINUX boot screen more visually appealing.  I haven't been successful, but I have reworked it somewhat.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -1,10 +1,9 @@
 PROMPT 0
 TIMEOUT 90
 DEFAULT /boot/syslinux/vesamenu.c32
-#MENU BACKGROUND /boot/byzantium.jpg
 MENU TITLE Byzantium Linux v0.3a (32-bit)
 
-MENU WIDTH 30
+MENU WIDTH 40
 MENU MARGIN 2
 MENU ROWS 10
 MENU HELPMSGROW 17
@@ -12,11 +11,11 @@ MENU TIMEOUTROW 28
 MENU TABMSGROW 15
 MENU CMDLINEROW 22
 MENU HSHIFT 4
-MENU VSHIFT 5
+MENU VSHIFT 3
 
-	menu color screen	37;40      #00000000 #00000000 none
-	menu color border	30;44      #00000000 #00000000 none
-	menu color title	1;36;44    #ffF6FF00 #30003f07 none
+	menu color screen	37;40      #00ee0000 #00eeffff none
+	menu color border	30;44      #40ffffff #a0000000 none
+	menu color title	1;36;44    #ffF6FF00 #a0000000 none
 	menu color unsel	37;44      #ffffffff #00000000 none
 	menu color hotkey	1;37;44    #ff8037b7 #00000000 none
 	menu color sel		7;37;40    #ff111B78 #003f7fbf none
@@ -79,8 +78,8 @@ TEXT HELP
     Start Byzantium as above, but
     first copy everything into RAM.
     This gives a huge speed increase
-    but it needs at least 1G of RAM.
-    It also takes a while.
+    but it needs at least 1GiB of RAM.
+    It also takes more time to load.
 ENDTEXT
 
 LABEL vesa
@@ -124,14 +123,14 @@ LABEL plop
 MENU LABEL PLoP BootManager
 KERNEL /boot/syslinux/plpbt
 TEXT HELP
-    Run the plop boot manager.
-    This utility provides handy
-    boot-USB options for machines
-    with vintage/defective BIOS
+    Run the PLoP boot manager.  This
+    utility provides handy boot-from-USB
+    options for machines with vintage
+    or defective BIOSes.
 ENDTEXT
 
 LABEL hd
-MENU LABEL Boot the first HD
+MENU LABEL Boot from the first hard drive
 COM32 /boot/syslinux/chain.c32
 APPEND hd0 1
 TEXT HELP
