Changed the text and colouring of the "Booting in..." countdown.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -13,6 +13,8 @@ MENU CMDLINEROW 22
 MENU HSHIFT 4
 MENU VSHIFT 3
 
+MENU AUTOBOOT Booting in # second{,s}...
+
 	menu color screen	37;40      #00ee0000 #00eeffff none
 	menu color border	30;44      #40ffffff #a0000000 none
 	menu color title	1;36;44    #ffF6FF00 #a0000000 none
@@ -28,7 +30,7 @@ MENU VSHIFT 3
 	menu color pwdborder	30;47      #ffff0000 #00000000 std
 	menu color pwdheader	31;47      #ffff0000 #00000000 std
 	menu color pwdentry	30;47      #ffff0000 #00000000 std
-	menu color timeout_msg	37;40      #ff809aef #00000000 none
+	menu color timeout_msg	37;40      #ff111b78 #00000000 none
 	menu color timeout	1;37;40    #ffb72f9f #00000000 none
 	menu color help		37;40      #ffD5F538 #00000000 none
 	menu color msg07	37;40      #90ffffff #00000000 std
