Got the HTTPS config stanza working the way it's supposed to.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -97,6 +97,7 @@ http {
     server {
         listen       443;
         server_name  localhost;
+        root	/srv/www;
 
         ssl                  on;
         ssl_certificate      /etc/httpd/server.crt;
@@ -109,7 +110,7 @@ http {
         ssl_prefer_server_ciphers   on;
 
         location / {
-            root   html;
+            #root   html;
             index  index.html index.htm;
         }
     }
