Turned off access logging.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -19,8 +19,8 @@ http {
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
     #access_log  logs/access.log  main;
+    access_log off;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -36,7 +36,6 @@ http {
         root	/srv/www;
 
         #charset koi8-r;
-
         #access_log  logs/host.access.log  main;
 
         location / {
