Made all of the HTTP errors redirect to /index.html (the service directory) for HTTP(S).
Turned off all logging to conserve (virtual) disk space.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -21,6 +21,7 @@ http {
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
     #access_log  logs/access.log  main;
     access_log off;
+    error_log /dev/null;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -49,7 +50,6 @@ http {
         #
         error_page   500 502 503 504  /index.html;
         location = /index.html {
-            #root   html;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -111,6 +111,10 @@ http {
         location / {
             #root   html;
             index  index.html index.htm;
+        }
+        error_page  404              /index.html;
+        error_page   500 502 503 504  /index.html;
+        location = /index.html {
         }
     }
 
