Added web app proxy support to the HTTP config stanza.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -40,17 +40,30 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            #root   html;
             index  index.html index.htm;
         }
 
-        error_page  404              /index.html;
+        location /olsrviz {
+		proxy_pass       http://localhost:8089;
+		proxy_set_header Host      $host;
+		proxy_set_header X-Real-IP $remote_addr;
+	}
 
-        # redirect server error pages to the static page /50x.html
-        #
+        location /chat {
+		proxy_pass       http://localhost:8989;
+		proxy_set_header Host      $host;
+		proxy_set_header X-Real-IP $remote_addr;
+	}
+
+        location /pad {
+		proxy_pass       http://localhost:9001;
+		proxy_set_header Host      $host;
+		proxy_set_header X-Real-IP $remote_addr;
+	}
+
+        # redirect server error pages to the static page /index.html
+        error_page  404              /index.html;
         error_page   500 502 503 504  /index.html;
-        location = /index.html {
-        }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
