Reconfigured proxy directives for web apps to listen on the right ports.
Added olsr-viz-lite to proxy directives.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -495,10 +495,16 @@ Include /etc/httpd/mod_php.conf
 <IfModule mod_proxy.c>
 	ProxyVia On
 	ProxyRequests Off
+	
+	ProxyPass /olsrviz/ http://localhost:8089/
+	ProxyPassReverse /olsrviz/ http://localhost:8089/
+	
+	ProxyPass /chat/ http://localhost:8989/
+	ProxyPassReverse /chat/ http://localhost:8989/
+	
 	ProxyPass /pad/ http://localhost:9001/
 	ProxyPassReverse /pad/ http://localhost:9001/
-	ProxyPass /chat/ http://localhost:9090/
-	ProxyPassReverse /chat/ http://localhost:9090/
+	
 	ProxyPreserveHost On
 	<Proxy *>
 		Options FollowSymLinks MultiViews
