--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -483,7 +483,7 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 # Uncomment the following line to enable PHP:
-Include /etc/httpd/mod_php.conf
+#Include /etc/httpd/mod_php.conf
 
 # Uncomment the following lines to enable svn support:
 #
