--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -166,7 +166,7 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/srv/httpd/htdocs"
+DocumentRoot "/srv/www"
 
 #
 # Each directory to which Apache has access can be configured with respect
