Changed the default web content stanza to /srv/www.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -193,7 +193,7 @@ DocumentRoot "/srv/www"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/srv/httpd/htdocs">
+<Directory "/srv/www">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
