Disabled aliases for status.net.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -313,8 +313,8 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    ScriptAlias /cgi-bin/ "/srv/httpd/cgi-bin/"
-	 Alias /microblog/ "/srv/httpd/htdocs/microblog/"
+    #ScriptAlias /cgi-bin/ "/srv/httpd/cgi-bin/"
+    #Alias /microblog/ "/srv/httpd/htdocs/microblog/"
 
 </IfModule>
 
