--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -413,6 +413,7 @@ DefaultType text/plain
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
 #ErrorDocument 402 http://www.example.com/subscription_info.html
 #
+ErrorDocument 404 /index.html
 
 #
 # EnableMMAP and EnableSendfile: On systems that support it, 
