Fixed proxy support for QwebIRC, which apparently doesn't like extra slashes in URIs.

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -491,9 +491,10 @@ SSLRandomSeed connect builtin
 	
 	ProxyPass /olsrviz/ http://localhost:8089/
 	ProxyPassReverse /olsrviz/ http://localhost:8089/
-	
-	ProxyPass /chat/ http://localhost:8989/
-	ProxyPassReverse /chat/ http://localhost:8989/
+
+	ProxyPreserveHost On	
+	ProxyPass /chat http://localhost:8989
+	ProxyPassReverse /chat http://localhost:8989
 	
 	ProxyPass /pad/ http://localhost:9001/
 	ProxyPassReverse /pad/ http://localhost:9001/
