Figured out how to proxy olsr-viz-lite through Apache.  Fixed the rules in httpd.conf.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -488,8 +488,8 @@ SSLRandomSeed connect builtin
 	ProxyVia On
 	ProxyRequests Off
 	
-	ProxyPass /olsrviz/ http://localhost:8089/
-	ProxyPassReverse /olsrviz/ http://localhost:8089/
+	ProxyPass /olsrviz http://localhost:8089
+	ProxyPassReverse /olsrviz http://localhost:8089
 
 	ProxyPreserveHost On	
 	ProxyPass /chat http://localhost:8989
