--- a/porteus/olsrd/olsrd.conf
+++ b/porteus/olsrd/olsrd.conf
@@ -113,12 +113,12 @@ ClearScreen     yes
 # 0.0.0.0 0.0.0.0
 
 # Enable smart gateway detection and propagation.
-SmartGateway yes
-SmartGatewayAllowNAT yes
-SmartGatewayPeriod 10000
-SmartGatewayStableCount 6
-SmartGatewayUplink "both"
-SmartGatewayUplinkNAT yes
+#SmartGateway yes
+#SmartGatewayAllowNAT yes
+#SmartGatewayPeriod 10000
+#SmartGatewayStableCount 6
+#SmartGatewayUplink "both"
+#SmartGatewayUplinkNAT yes
 
 Hna4
 {
@@ -158,7 +158,7 @@ AllowNoInt	yes
 # dynamically based on battery/power status
 # if such information is available
 
-Willingness    3
+Willingness    	3
 
 # Allow processes like the GUI front-end
 # to connect to the daemon.
@@ -324,3 +324,9 @@ LoadPlugin "olsrd_jsoninfo.so.0.0"
   #PlParam     "port" "2004"
 #}
 
+#SmartGateway yes
+#SmartGatewayAllowNAT yes
+#SmartGatewayPeriod 10000
+#SmartGatewayStableCount 6
+#SmartGatewayUplink "both"
+#SmartGatewayUplinkNAT yes
