--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -42,93 +42,12 @@ http {
         location / {
             index  index.html index.htm;
         }
-
-        location /olsrviz {
-		proxy_pass       http://localhost:8089;
-		proxy_set_header Host      $host;
-		proxy_set_header X-Real-IP $remote_addr;
-	}
-
-        location /chat {
-		proxy_pass       http://localhost:8989;
-		proxy_set_header Host      $host;
-		proxy_set_header X-Real-IP $remote_addr;
-	}
-
-        location /pad {
-		proxy_pass       http://localhost:9001;
-		proxy_set_header Host      $host;
-		proxy_set_header X-Real-IP $remote_addr;
-	}
+		  include byzantium.conf.d/chat.conf;
+		  include byzantium.conf.d/pad.conf;
 
         # redirect server error pages to the static page /index.html
         error_page  404              /index.html;
         error_page   500 502 503 504  /index.html;
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    server {
-        listen       443;
-        server_name  localhost;
-        root	/srv/www;
-
-        ssl                  on;
-        ssl_certificate      /etc/httpd/server.crt;
-        ssl_certificate_key  /etc/httpd/server.key;
-
-        ssl_session_timeout  5m;
-
-        ssl_protocols  SSLv3 TLSv1 SSLv2;
-        ssl_ciphers  HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers   on;
-
-        location / {
-            #root   html;
-            index  index.html index.htm;
-        }
-        error_page  404              /index.html;
-        error_page   500 502 503 504  /index.html;
-        location = /index.html {
-        }
-    }
-
+	 include byzantium.conf.d/byzantium_local.conf;
 }
