--- a/porteus/avahi/etc/avahi/avahi-daemon.conf
+++ b/porteus/avahi/etc/avahi/avahi-daemon.conf
@@ -49,8 +49,8 @@ publish-addresses=yes
 publish-hinfo=no
 publish-workstation=yes
 publish-domain=yes
-#publish-dns-servers=8.8.8.8, 4.2.2.1, 4.2.2.2
-publish-resolv-conf-dns-servers=yes
+publish-dns-servers=8.8.8.8, 4.2.2.1, 4.2.2.2, 8.8.4.4
+#publish-resolv-conf-dns-servers=yes
 #publish-aaaa-on-ipv4=yes
 #publish-a-on-ipv6=no
 
