Overwrote with the olsrd.conf file from commotionwireless.net.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/olsrd/olsrd.conf
+++ b/porteus/olsrd/olsrd.conf
@@ -1,7 +1,19 @@
+#
+# olsr.org OLSR daemon config file
+#
+# Lines starting with a # are discarded
+#
+# This file was shipped with the debian olsrd package
+#
+
+# Debug level(0-9)
+# If set to 0 the daemon runs in the background
+
 DebugLevel	0
 
 # the interface the mesh runs on is specified at run time using the -i flag
 
+#InterfaceDefaults
 InterfaceDefaults
 {
   # Olsrd can autodetect changes in NIC configurations (IP address
@@ -111,14 +123,6 @@ ClearScreen     yes
 # syntax: netaddr netmask
 # Example Internet gateway:
 # 0.0.0.0 0.0.0.0
-
-# Enable smart gateway detection and propagation.
-#SmartGateway yes
-#SmartGatewayAllowNAT yes
-#SmartGatewayPeriod 10000
-#SmartGatewayStableCount 6
-#SmartGatewayUplink "both"
-#SmartGatewayUplinkNAT yes
 
 Hna4
 {
@@ -270,17 +274,17 @@ MprCoverage	5
 #}
 
 ## for more info: http://olsr.org/?q=txtinfo_plugin
-#LoadPlugin "olsrd_txtinfo.so.0.1"
-#{
-#  PlParam     "port"   "2006"
-#  PlParam     "accept" "0.0.0.0"
-#}
+LoadPlugin "olsrd_txtinfo.so.0.1"
+{
+  PlParam     "port"   "2006"
+  PlParam     "accept" "0.0.0.0"
+}
 
 ## for more info: http://olsr.org/?q=jsoninfo_plugin
 LoadPlugin "olsrd_jsoninfo.so.0.0"
 {
   PlParam     "port"   "9090"
-  PlParam     "accept" "127.0.0.1"
+  PlParam     "accept" "0.0.0.0"
 }
 
 # useful if your machine has an uplink
@@ -324,9 +328,4 @@ LoadPlugin "olsrd_jsoninfo.so.0.0"
   #PlParam     "port" "2004"
 #}
 
-#SmartGateway yes
-#SmartGatewayAllowNAT yes
-#SmartGatewayPeriod 10000
-#SmartGatewayStableCount 6
-#SmartGatewayUplink "both"
-#SmartGatewayUplinkNAT yes
+
