Created an ifplugd.action script that should do what we want when we set up a gateway.
Created what looks like a sane set of configs for ifplugd.

Replaced the network interface detection code in rc.ifplugd that ignores wireless interfaces.

Added a new olsrd.conf file from Commotion's repository.

Commented out all of the evocations of dhcpcd in rc.inet1.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ifplugd/etc/ifplugd/ifplugd.conf
+++ b/porteus/ifplugd/etc/ifplugd/ifplugd.conf
@@ -32,12 +32,14 @@
 # have loaded.
 # Because ifplugd will grab onto wireless interfaces as well, we can't trust the 'auto'
 # keyword.
-INTERFACES="eth0"
+#INTERFACES="eth0"
 
 # Additional parameters for ifplugd.
 # (Run "ifplugd -h" for further information.)
 #ARGS="-fwI -u0 -d10 -r /usr/local/sbin/ethernet.py -M -d -u 2"
-ARGS="-fwI -u0 -d10 -M -d -u 2"
+
+# Note - I optimized the hell out of these args. --drwho
+ARGS="-fwI -u5 -M -d"
 
 # Additional parameters for ifplugd for the specified interface.  Note
 # that $ARGS is ignored, when a variable like this is set for an
