--- a/porteus/olsrd/olsrd.conf
+++ b/porteus/olsrd/olsrd.conf
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 #
 # olsr.org OLSR daemon config file
 #
@@ -11,12 +10,9 @@
 # If set to 0 the daemon runs in the background
 
 DebugLevel	0
-=======
->>>>>>> 5a2301d9e0aed140b24e40e910d0af9f34d61805
 
-# http://commotionwireless.net/
+# the interface the mesh runs on is specified at run time using the -i flag
 
-<<<<<<< HEAD
 #InterfaceDefaults
 InterfaceDefaults
 {
@@ -127,31 +123,72 @@ ClearScreen     yes
 # syntax: netaddr netmask
 # Example Internet gateway:
 # 0.0.0.0 0.0.0.0
-=======
-DebugLevel 0
-AllowNoInt yes
-IpVersion 4
-LinkQualityLevel 2
-LinkQualityAlgorithm "etx_ffeth"
-SmartGateway yes
->>>>>>> 5a2301d9e0aed140b24e40e910d0af9f34d61805
 
 Hna4
 {
-#		101.149.21.0 255.255.255.0
-#		102.149.21.0 255.255.255.0
-#		103.149.21.0 255.255.255.0
+#   Internet gateway:
+#   0.0.0.0      0.0.0.0
+#   more entries can be added:
+#   192.168.1.0  255.255.255.0
 }
 
-LoadPlugin "olsrd_arprefresh.so.0.1"
+# HNA IPv6 routes
+# syntax: netaddr prefix
+# Example Internet gateway:
+Hna6
 {
+#   Internet gateway:
+#   ::              0
+#   more entries can be added:
+#   fec0:2200:106:: 48
 }
 
-LoadPlugin "olsrd_dyn_gw.so.0.5"
+
+# Should olsrd keep on running even if there are
+# no interfaces available? This is a good idea
+# for a PCMCIA/USB hotswap environment.
+# "yes" OR "no"
+
+AllowNoInt	yes
+
+# TOS(type of service) value for
+# the IP header of control traffic.
+# If not set it will default to 16
+
+#TosValue	16
+
+# The fixed willingness to use(0-7)
+# If not set willingness will be calculated
+# dynamically based on battery/power status
+# if such information is available
+
+Willingness    	3
+
+# Allow processes like the GUI front-end
+# to connect to the daemon.
+
+IpcConnect
 {
+     # Determines how many simultaneously
+     # IPC connections that will be allowed
+     # Setting this to 0 disables IPC
+
+     MaxConnections  0
+
+     # By default only 127.0.0.1 is allowed
+     # to connect. Here allowed hosts can
+     # be added
+
+     Host            127.0.0.1
+     #Host            10.0.0.5
+
+     # You can also specify entire net-ranges 
+     # that are allowed to connect. Multiple
+     # entries are allowed
+
+     #Net             192.168.1.0 255.255.255.0     
 }
 
-<<<<<<< HEAD
 # Wether to use hysteresis or not
 # Hysteresis adds more robustness to the
 # link sensing but delays neighbor registration.
@@ -248,39 +285,47 @@ LoadPlugin "olsrd_jsoninfo.so.0.0"
 {
   PlParam     "port"   "9090"
   PlParam     "accept" "0.0.0.0"
-=======
-LoadPlugin "olsrd_httpinfo.so.0.1"
-{
-	PlParam "Net" "0.0.0.0 0.0.0.0"
-	PlParam "port" "1978"
->>>>>>> 5a2301d9e0aed140b24e40e910d0af9f34d61805
 }
 
-LoadPlugin "olsrd_nameservice.so.0.3"
-{
-	PlParam "name" "commotion-7814921"
-	PlParam "sighup-pid-file" "/var/run/dnsmasq.pid"
-	PlParam "suffix" ".mesh"
-}
+# useful if your machine has an uplink
+#LoadPlugin "olsrd_dyn_gw.so.0.4"
+#{
+  # Here parameters are set to be sent to the
+  # plugin. Theese are on the form "key" "value".
+  # Parameters ofcause, differs from plugin to plugin.
+  # Consult the documentation of your plugin for details.
 
-LoadPlugin "olsrd_p2pd.so.0.1.0"
-{
-	PlParam "NonOlsrIf" "eth0"
-	PlParam "P2pdTtl" "5"
-	PlParam "UdpDestPort" "224.0.0.251 5353"
-}
+  # Example: dyn_gw params
 
-LoadPlugin "olsrd_txtinfo.so.0.1"
-{
-	PlParam "accept" "0.0.0.0"
-}
+  # how often to check for Internet connectivity
+  # defaults to 5 secs
+  #PlParam     "Interval"   "40"
+    
+  # if one or more IPv4 addresses are given, do a ping on these in
+  # descending order to validate that there is not only an entry in
+  # routing table, but also a real internet connection. If any of
+  # these addresses could be pinged successfully, the test was
+  # succesful, i.e. if the ping on the 1st address was successful,the
+  # 2nd won't be pinged
+  #PlParam     "Ping"       "141.1.1.1"
+  #PlParam     "Ping"       "194.25.2.129"
+#}
 
-Interface "wlan0"
-{
-	Ip4Broadcast 255.255.255.255
-}
+#LoadPlugin "olsrd_nameservice.so.0.2"
+#{
+  #PlParam "name" "xxx"
+  #PlParam "a.b.c.d" "xxx-eth"
+  #PlParam "a.b.c.e" "xxx-bbb"
+  #PlParam "a.b.c.f" "xxx-olsr"
+  #PlParam "suffix" ".olsr"
+#}
 
-<<<<<<< HEAD
+#LoadPlugin "olsrd_dot_draw.so.0.3"
+#{
+  # accept connection from IP:
+  # default 127.0.0.1 (localhost)  
+  #PlParam     "accept" "192.168.0.5"
+  #PlParam     "port" "2004"
+#}
 
-=======
->>>>>>> 5a2301d9e0aed140b24e40e910d0af9f34d61805
+
