--- a/porteus/ifplugd/etc/ifplugd/ifplugd.conf
+++ b/porteus/ifplugd/etc/ifplugd/ifplugd.conf
@@ -39,7 +39,7 @@
 #ARGS="-fwI -u0 -d10 -r /usr/local/sbin/ethernet.py -M -d -u 2"
 
 # Note - I optimized the hell out of these args. --drwho
-ARGS="-fwI -u5 -M -d"
+ARGS="-fwI -u5 -M"
 
 # Additional parameters for ifplugd for the specified interface.  Note
 # that $ARGS is ignored, when a variable like this is set for an
