Set the default TTL of hostnames resolved by dnsmasqd to 0 so the clients (in theory) won't cache them.
Added code to bounce avahi-daemon to ifplugd.action to (un-)propagate DNSes whenever a
gateway comes up or goes down.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/dnsmasq/dnsmasq.conf
+++ b/porteus/dnsmasq/dnsmasq.conf
@@ -307,6 +307,11 @@ local-ttl=300
 # Log lots of extra information about DHCP transactions.
 #log-dhcp
 
+# Set the TTL on everything sent to the clients to 0, which should help
+# work around browsers that cache replies and mess with the gateway
+# functionality.
+max-ttl=0
+
 # Include a another lot of configuration options.
 #conf-file=/etc/dnsmasq.more.conf
 #conf-dir=/etc/dnsmasq.d
