Enabled mod_ssl and mod_proxy_html in httpd.conf.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -106,7 +106,7 @@ LoadModule filter_module lib/httpd/modules/mod_filter.so
 #LoadModule charset_lite_module lib/httpd/modules/mod_charset_lite.so
 #LoadModule deflate_module lib/httpd/modules/mod_deflate.so
 #LoadModule xml2enc_module lib/httpd/modules/mod_xml2enc.so
-#LoadModule proxy_html_module lib/httpd/modules/mod_proxy_html.so
+LoadModule proxy_html_module lib/httpd/modules/mod_proxy_html.so
 LoadModule mime_module lib/httpd/modules/mod_mime.so
 #LoadModule ldap_module lib/httpd/modules/mod_ldap.so
 LoadModule log_config_module lib/httpd/modules/mod_log_config.so
@@ -124,12 +124,12 @@ LoadModule version_module lib/httpd/modules/mod_version.so
 #LoadModule remoteip_module lib/httpd/modules/mod_remoteip.so
 LoadModule proxy_module lib/httpd/modules/mod_proxy.so
 LoadModule proxy_connect_module lib/httpd/modules/mod_proxy_connect.so
-#LoadModule proxy_ftp_module lib/httpd/modules/mod_proxy_ftp.so
-#LoadModule proxy_http_module lib/httpd/modules/mod_proxy_http.so
+LoadModule proxy_ftp_module lib/httpd/modules/mod_proxy_ftp.so
+LoadModule proxy_http_module lib/httpd/modules/mod_proxy_http.so
 LoadModule proxy_fcgi_module lib/httpd/modules/mod_proxy_fcgi.so
 LoadModule proxy_scgi_module lib/httpd/modules/mod_proxy_scgi.so
 #LoadModule proxy_fdpass_module lib/httpd/modules/mod_proxy_fdpass.so
-#LoadModule proxy_ajp_module lib/httpd/modules/mod_proxy_ajp.so
+LoadModule proxy_ajp_module lib/httpd/modules/mod_proxy_ajp.so
 #LoadModule proxy_balancer_module lib/httpd/modules/mod_proxy_balancer.so
 LoadModule proxy_express_module lib/httpd/modules/mod_proxy_express.so
 #LoadModule session_module lib/httpd/modules/mod_session.so
@@ -137,7 +137,7 @@ LoadModule proxy_express_module lib/httpd/modules/mod_proxy_express.so
 #LoadModule session_dbd_module lib/httpd/modules/mod_session_dbd.so
 #LoadModule slotmem_shm_module lib/httpd/modules/mod_slotmem_shm.so
 #LoadModule slotmem_plain_module lib/httpd/modules/mod_slotmem_plain.so
-#LoadModule ssl_module lib/httpd/modules/mod_ssl.so
+LoadModule ssl_module lib/httpd/modules/mod_ssl.so
 #LoadModule dialup_module lib/httpd/modules/mod_dialup.so
 LoadModule lbmethod_byrequests_module lib/httpd/modules/mod_lbmethod_byrequests.so
 LoadModule lbmethod_bytraffic_module lib/httpd/modules/mod_lbmethod_bytraffic.so
@@ -148,12 +148,12 @@ LoadModule unixd_module lib/httpd/modules/mod_unixd.so
 #LoadModule heartbeat_module lib/httpd/modules/mod_heartbeat.so
 #LoadModule heartmonitor_module lib/httpd/modules/mod_heartmonitor.so
 #LoadModule dav_module lib/httpd/modules/mod_dav.so
-#LoadModule status_module lib/httpd/modules/mod_status.so
+LoadModule status_module lib/httpd/modules/mod_status.so
 LoadModule autoindex_module lib/httpd/modules/mod_autoindex.so
 #LoadModule asis_module lib/httpd/modules/mod_asis.so
 #LoadModule info_module lib/httpd/modules/mod_info.so
-LoadModule cgid_module lib/httpd/modules/mod_cgid.so
-LoadModule cgi_module lib/httpd/modules/mod_cgi.so
+#LoadModule cgid_module lib/httpd/modules/mod_cgid.so
+#LoadModule cgi_module lib/httpd/modules/mod_cgi.so
 #LoadModule dav_fs_module lib/httpd/modules/mod_dav_fs.so
 #LoadModule dav_lock_module lib/httpd/modules/mod_dav_lock.so
 #LoadModule vhost_alias_module lib/httpd/modules/mod_vhost_alias.so
@@ -163,7 +163,7 @@ LoadModule dir_module lib/httpd/modules/mod_dir.so
 #LoadModule speling_module lib/httpd/modules/mod_speling.so
 #LoadModule userdir_module lib/httpd/modules/mod_userdir.so
 LoadModule alias_module lib/httpd/modules/mod_alias.so
-LoadModule rewrite_module lib/httpd/modules/mod_rewrite.so
+#LoadModule rewrite_module lib/httpd/modules/mod_rewrite.so
 
 <IfModule unixd_module>
 #
