Need mod_xml2enc, also.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -105,7 +105,7 @@ LoadModule filter_module lib/httpd/modules/mod_filter.so
 #LoadModule sed_module lib/httpd/modules/mod_sed.so
 #LoadModule charset_lite_module lib/httpd/modules/mod_charset_lite.so
 #LoadModule deflate_module lib/httpd/modules/mod_deflate.so
-#LoadModule xml2enc_module lib/httpd/modules/mod_xml2enc.so
+LoadModule xml2enc_module lib/httpd/modules/mod_xml2enc.so
 LoadModule proxy_html_module lib/httpd/modules/mod_proxy_html.so
 LoadModule mime_module lib/httpd/modules/mod_mime.so
 #LoadModule ldap_module lib/httpd/modules/mod_ldap.so
