Added stanza for Etherpad-Lite.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/extra/proxy-html.conf
+++ b/porteus/apache/etc/httpd/extra/proxy-html.conf
@@ -90,6 +90,12 @@ ProxyHTMLEvents	onclick ondblclick onmousedown onmouseup \
 # http://www.apachetutor.org/admin/reverseproxies
 
 ProxyRequests off
+
+# QwebIRC
 ProxyPass /chat/ http://localhost:8989/
 ProxyPassReverse /chat/ http://localhost:8989/
+
+# Etherpad-Lite
+ProxyPass /pad/ http://localhost:9001/
+ProxyPassReverse /pad/ http://localhost:9001/
 
