Added stanza for olsrd's JSON instrumentation port.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/extra/proxy-html.conf
+++ b/porteus/apache/etc/httpd/extra/proxy-html.conf
@@ -99,3 +99,7 @@ ProxyPassReverse /chat/ http://localhost:8989/
 ProxyPass /pad/ http://localhost:9001/
 ProxyPassReverse /pad/ http://localhost:9001/
 
+# olsrd JSON port.
+ProxyPass /olsrd/ http://localhost:9090/
+ProxyPassReverse /olsrd/ http://localhost:9090/
+
