Enabled mod_cache_shmcb for mod_ssl.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -85,7 +85,7 @@ LoadModule auth_basic_module lib/httpd/modules/mod_auth_basic.so
 #LoadModule file_cache_module lib/httpd/modules/mod_file_cache.so
 #LoadModule cache_module lib/httpd/modules/mod_cache.so
 #LoadModule cache_disk_module lib/httpd/modules/mod_cache_disk.so
-#LoadModule socache_shmcb_module lib/httpd/modules/mod_socache_shmcb.so
+LoadModule socache_shmcb_module lib/httpd/modules/mod_socache_shmcb.so
 #LoadModule socache_dbm_module lib/httpd/modules/mod_socache_dbm.so
 #LoadModule socache_memcache_module lib/httpd/modules/mod_socache_memcache.so
 #LoadModule watchdog_module lib/httpd/modules/mod_watchdog.so
