Changed the FQDN ngircd thinks its listening on.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ngircd/ngircd.conf
+++ b/porteus/ngircd/ngircd.conf
@@ -22,7 +22,7 @@
 
 	# Server name in the IRC network, must contain at least one dot
 	# (".") and be unique in the IRC network. Required!
-	Name = irc.the.net
+	Name = byzantium.mesh
 
 	# Info text of the server. This will be shown by WHOIS and
 	# LINKS requests for example.
