DNSes don't need to be hardcoded in avahi-daemon.conf.  It does weird things.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/avahi/etc/avahi/avahi-daemon.conf
+++ b/porteus/avahi/etc/avahi/avahi-daemon.conf
@@ -49,7 +49,7 @@ publish-addresses=yes
 publish-hinfo=no
 publish-workstation=yes
 publish-domain=yes
-publish-dns-servers=8.8.8.8, 4.2.2.1, 4.2.2.2, 8.8.4.4
+publish-dns-servers=
 #publish-resolv-conf-dns-servers=yes
 #publish-aaaa-on-ipv4=yes
 #publish-a-on-ipv6=no
