Initial commit and mods of an ISOLINUX config file from Porteus v2.0 for Byzantium v0.3.2a.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -1,143 +1,117 @@
 PROMPT 0
 TIMEOUT 90
-DEFAULT /boot/syslinux/vesamenu.c32
-MENU TITLE Byzantium Linux v0.3a (32-bit)
+UI vesamenu.c32
+DEFAULT razor
+MENU TITLE Byzantium Linux v0.3.2a
 
-MENU WIDTH 40
-MENU MARGIN 0
+MENU WIDTH 30
+MENU MARGIN 2
 MENU ROWS 10
 MENU HELPMSGROW 17
 MENU TIMEOUTROW 28
 MENU TABMSGROW 15
 MENU CMDLINEROW 22
 MENU HSHIFT 4
-MENU VSHIFT 3
+MENU VSHIFT 5
 
-MENU AUTOBOOT Booting in # second{,s}...
-
-	menu color screen	37;40      #00880000 #00eeffff none
-	menu color border	30;44      #40ffffff #a0000000 none
-	menu color title	1;36;44    #ffF6FF00 #a0000000 none
+	menu color screen	37;40      #00000000 #00000000 none
+	menu color border	30;44      #00000000 #00000000 none
+	menu color title	1;36;44    #ffF6FF00 #30003f07 none
 	menu color unsel	37;44      #ffffffff #00000000 none
 	menu color hotkey	1;37;44    #ff8037b7 #00000000 none
 	menu color sel		7;37;40    #ff111B78 #003f7fbf none
 	menu color hotsel	1;7;37;40  #ffaf67f7 #003f7fbf none
 	menu color scrollbar	30;44      #00000000 #00000000 none
-
-	menu color tabmsg	31;40      #ff0000ee #00000000 none
+	
+	menu color tabmsg	31;40      #ffB6F538 #00000000 none
 	menu color cmdmark	1;36;40    #ffff0000 #00000000 none
 	menu color cmdline	37;40      #ffffffff #ff000000 none
 	menu color pwdborder	30;47      #ffff0000 #00000000 std
 	menu color pwdheader	31;47      #ffff0000 #00000000 std
 	menu color pwdentry	30;47      #ffff0000 #00000000 std
-	menu color timeout_msg	37;40      #ff111b78 #00000000 none
+	menu color timeout_msg	37;40      #ff809aef #00000000 none
 	menu color timeout	1;37;40    #ffb72f9f #00000000 none
 	menu color help		37;40      #ffD5F538 #00000000 none
 	menu color msg07	37;40      #90ffffff #00000000 std
 
-LABEL kde
-MENU LABEL Desktop mode (KDE)
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 changes=/porteus/ 
+LABEL razor
+MENU LABEL Default desktop (Razor)
+KERNEL vmlinuz
+APPEND initrd=initrd.xz changes=/porteus 
 TEXT HELP
-    Start Byzantium with the KDE
-    desktop.  Autoconfigure the
-    graphics card to use the
-    highest resolution possible.
-ENDTEXT
-
-LABEL lxde
-MENU LABEL Desktop mode (LXDE)
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 lxde changes=/porteus/ 
-TEXT HELP
-    Start Byzantium but use the
-    lightweight LXDE desktop
-    instead of KDE.  Autoconfigure
-    the graphics card to use the
-    highest resolution possible.
+    Boot Byzantium into the default
+    desktop. Automatically configure
+    the graphics card for the best
+    possible resolution.
 ENDTEXT
 
 LABEL fresh
 MENU LABEL Always Fresh
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 nomagic base_only norootcopy 
+KERNEL vmlinuz
+APPEND initrd=initrd.xz nomagic base_only norootcopy 
 TEXT HELP
-    Normally all changes are saved
-    to the /porteus/changes/ directory
-    on the boot media (if writable)
-    and restores them at next boot.
-    Using this option during boot means
-    that changes will not be read or
-    written to any storage devices.
+    Boot into the default desktop but
+    don't load any saved changes (if
+    there were any). This is useful
+    if something got messed up.
 ENDTEXT
 
 LABEL copy2ram
-MENU LABEL Copy systemware to RAM
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 copy2ram 
+MENU LABEL Copy To RAM
+KERNEL vmlinuz
+APPEND initrd=initrd.xz copy2ram 
 TEXT HELP
-    Start Byzantium as above, but
-    first copy everything into RAM.
-    This gives a huge speed increase
-    but it needs at least 1GiB of RAM.
-    It also takes more time to load.
-ENDTEXT
-
-LABEL vesa
-MENU LABEL VESA graphics mode
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz nomodeset autoexec=vesa-mode changes=/porteus/ 
-TEXT HELP
-    Start the KDE desktop but skip
-    autoconfiguration of the graphics
-    card.  The desktop will have a
-    default resolution of 1024x768.
+    Boot into the default desktop but
+    first load everything into RAM.
+    It speeds things up greatly,
+    but you should have 1GB RAM or
+    more installed.
 ENDTEXT
 
 LABEL text
 MENU LABEL Text mode
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz autoexec=telinit~3 
+KERNEL vmlinuz
+APPEND initrd=initrd.xz 3 
 TEXT HELP
-    Start Byzantium in text mode.
-    You will only have a command
-    prompt but you can start a
-    desktop if you need to.  This
-    mode uses the least battery
-    power.
+    Boot Byzantium into text mode.
+    Everything will be configured
+    and will work normally, but you
+    will only have a shell and not
+    a desktop.
 ENDTEXT
 
-LABEL pxe
-MENU LABEL Byzantium PXE server
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz autoexec=pxe-boot~& 
+LABEL pxe-boot
+MENU LABEL PXE server
+KERNEL vmlinuz
+APPEND initrd=initrd.xz autoexec=pxe-boot~& 
 TEXT HELP
-    Start Byzantium as usual, but also
-    initialize a PXE server.   This
-    will allow you to netboot Byzantium
-    on other computers over a network.
+    Boot Byzantium normally but also
+    initialize a PXE boot server.
+    This will allow you to netboot
+    Byzantium on other computers
+    over a LAN.
 ENDTEXT
 
 MENU SEPARATOR
 
 LABEL plop
-MENU LABEL PLoP BootManager
-KERNEL /boot/syslinux/plpbt
+MENU LABEL PLoP Boot Manager
+KERNEL plpbt
 TEXT HELP
-    Run the PLoP boot manager.  This
-    utility provides handy boot-from-USB
-    options for machines with vintage
-    or defective BIOSes.
+    Run the PloP boot manager.
+    This utility provides handy
+    boot-from-USB options for
+    machines that have vintage
+    or defective BIOS.
 ENDTEXT
 
 LABEL hd
-MENU LABEL Boot from the first hard drive
-COM32 /boot/syslinux/chain.c32
+MENU LABEL Boot from the first hd
+COM32 chain.c32
 APPEND hd0 1
 TEXT HELP
-    Don't start Byzantium Linux, but
-    instead chainboot any operating
-    system installed on the first
-    partition of the first hard drive.
+    Don't start Byzantium at all, but
+    chainboot any operating system
+    installed on the first partition
+    of the first hard drive.
 ENDTEXT
